--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -164,7 +164,7 @@ $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": (
       &[disabled],
       fieldset[disabled] &
         background-color: $color
-        border-color: transparent
+        border-color: $color
         box-shadow: none
       &.is-inverted
         background-color: $color-invert
