--- a/css/bulma.css
+++ b/css/bulma.css
@@ -611,7 +611,7 @@ fieldset[disabled] .button.is-text {
 .button.is-white[disabled],
 fieldset[disabled] .button.is-white {
   background-color: white;
-  border-color: transparent;
+  border-color: white;
   box-shadow: none;
 }
 
@@ -717,7 +717,7 @@ fieldset[disabled] .button.is-white.is-inverted.is-outlined {
 .button.is-black[disabled],
 fieldset[disabled] .button.is-black {
   background-color: #0a0a0a;
-  border-color: transparent;
+  border-color: #0a0a0a;
   box-shadow: none;
 }
 
@@ -823,7 +823,7 @@ fieldset[disabled] .button.is-black.is-inverted.is-outlined {
 .button.is-light[disabled],
 fieldset[disabled] .button.is-light {
   background-color: whitesmoke;
-  border-color: transparent;
+  border-color: whitesmoke;
   box-shadow: none;
 }
 
@@ -929,7 +929,7 @@ fieldset[disabled] .button.is-light.is-inverted.is-outlined {
 .button.is-dark[disabled],
 fieldset[disabled] .button.is-dark {
   background-color: #363636;
-  border-color: transparent;
+  border-color: #363636;
   box-shadow: none;
 }
 
@@ -1035,7 +1035,7 @@ fieldset[disabled] .button.is-dark.is-inverted.is-outlined {
 .button.is-primary[disabled],
 fieldset[disabled] .button.is-primary {
   background-color: #00d1b2;
-  border-color: transparent;
+  border-color: #00d1b2;
   box-shadow: none;
 }
 
@@ -1158,7 +1158,7 @@ fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
 .button.is-link[disabled],
 fieldset[disabled] .button.is-link {
   background-color: #485fc7;
-  border-color: transparent;
+  border-color: #485fc7;
   box-shadow: none;
 }
 
@@ -1281,7 +1281,7 @@ fieldset[disabled] .button.is-link.is-inverted.is-outlined {
 .button.is-info[disabled],
 fieldset[disabled] .button.is-info {
   background-color: #3e8ed0;
-  border-color: transparent;
+  border-color: #3e8ed0;
   box-shadow: none;
 }
 
@@ -1404,7 +1404,7 @@ fieldset[disabled] .button.is-info.is-inverted.is-outlined {
 .button.is-success[disabled],
 fieldset[disabled] .button.is-success {
   background-color: #48c78e;
-  border-color: transparent;
+  border-color: #48c78e;
   box-shadow: none;
 }
 
@@ -1527,7 +1527,7 @@ fieldset[disabled] .button.is-success.is-inverted.is-outlined {
 .button.is-warning[disabled],
 fieldset[disabled] .button.is-warning {
   background-color: #ffe08a;
-  border-color: transparent;
+  border-color: #ffe08a;
   box-shadow: none;
 }
 
@@ -1650,7 +1650,7 @@ fieldset[disabled] .button.is-warning.is-inverted.is-outlined {
 .button.is-danger[disabled],
 fieldset[disabled] .button.is-danger {
   background-color: #f14668;
-  border-color: transparent;
+  border-color: #f14668;
   box-shadow: none;
 }
 
