3500 fix ios bug (#3521)
* Fix docs navbar, Fix z-indices

* Update dependencies, Fix #3500

* Update changelog

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -614,7 +614,7 @@ fieldset[disabled] .button.is-text {
 .button.is-white[disabled],
 fieldset[disabled] .button.is-white {
   background-color: white;
-  border-color: transparent;
+  border-color: white;
   box-shadow: none;
 }
 
@@ -720,7 +720,7 @@ fieldset[disabled] .button.is-white.is-inverted.is-outlined {
 .button.is-black[disabled],
 fieldset[disabled] .button.is-black {
   background-color: #0a0a0a;
-  border-color: transparent;
+  border-color: #0a0a0a;
   box-shadow: none;
 }
 
@@ -826,7 +826,7 @@ fieldset[disabled] .button.is-black.is-inverted.is-outlined {
 .button.is-light[disabled],
 fieldset[disabled] .button.is-light {
   background-color: whitesmoke;
-  border-color: transparent;
+  border-color: whitesmoke;
   box-shadow: none;
 }
 
@@ -932,7 +932,7 @@ fieldset[disabled] .button.is-light.is-inverted.is-outlined {
 .button.is-dark[disabled],
 fieldset[disabled] .button.is-dark {
   background-color: #363636;
-  border-color: transparent;
+  border-color: #363636;
   box-shadow: none;
 }
 
@@ -1038,7 +1038,7 @@ fieldset[disabled] .button.is-dark.is-inverted.is-outlined {
 .button.is-primary[disabled],
 fieldset[disabled] .button.is-primary {
   background-color: #00d1b2;
-  border-color: transparent;
+  border-color: #00d1b2;
   box-shadow: none;
 }
 
@@ -1161,7 +1161,7 @@ fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
 .button.is-link[disabled],
 fieldset[disabled] .button.is-link {
   background-color: #485fc7;
-  border-color: transparent;
+  border-color: #485fc7;
   box-shadow: none;
 }
 
@@ -1284,7 +1284,7 @@ fieldset[disabled] .button.is-link.is-inverted.is-outlined {
 .button.is-info[disabled],
 fieldset[disabled] .button.is-info {
   background-color: #3e8ed0;
-  border-color: transparent;
+  border-color: #3e8ed0;
   box-shadow: none;
 }
 
@@ -1407,7 +1407,7 @@ fieldset[disabled] .button.is-info.is-inverted.is-outlined {
 .button.is-success[disabled],
 fieldset[disabled] .button.is-success {
   background-color: #48c78e;
-  border-color: transparent;
+  border-color: #48c78e;
   box-shadow: none;
 }
 
@@ -1530,7 +1530,7 @@ fieldset[disabled] .button.is-success.is-inverted.is-outlined {
 .button.is-warning[disabled],
 fieldset[disabled] .button.is-warning {
   background-color: #ffe08a;
-  border-color: transparent;
+  border-color: #ffe08a;
   box-shadow: none;
 }
 
@@ -1653,7 +1653,7 @@ fieldset[disabled] .button.is-warning.is-inverted.is-outlined {
 .button.is-danger[disabled],
 fieldset[disabled] .button.is-danger {
   background-color: #f14668;
-  border-color: transparent;
+  border-color: #f14668;
   box-shadow: none;
 }
 
@@ -1776,7 +1776,7 @@ fieldset[disabled] .button.is-danger.is-inverted.is-outlined {
 .button.is-expo[disabled],
 fieldset[disabled] .button.is-expo {
   background-color: #ffd257;
-  border-color: transparent;
+  border-color: #ffd257;
   box-shadow: none;
 }
 
@@ -1899,7 +1899,7 @@ fieldset[disabled] .button.is-expo.is-inverted.is-outlined {
 .button.is-love[disabled],
 fieldset[disabled] .button.is-love {
   background-color: #f14668;
-  border-color: transparent;
+  border-color: #f14668;
   box-shadow: none;
 }
 
@@ -2022,7 +2022,7 @@ fieldset[disabled] .button.is-love.is-inverted.is-outlined {
 .button.is-patreon[disabled],
 fieldset[disabled] .button.is-patreon {
   background-color: #f96854;
-  border-color: transparent;
+  border-color: #f96854;
   box-shadow: none;
 }
 
@@ -2145,7 +2145,7 @@ fieldset[disabled] .button.is-patreon.is-inverted.is-outlined {
 .button.is-rss[disabled],
 fieldset[disabled] .button.is-rss {
   background-color: #f26522;
-  border-color: transparent;
+  border-color: #f26522;
   box-shadow: none;
 }
 
@@ -2268,7 +2268,7 @@ fieldset[disabled] .button.is-rss.is-inverted.is-outlined {
 .button.is-bleeding[disabled],
 fieldset[disabled] .button.is-bleeding {
   background-color: #abf47c;
-  border-color: transparent;
+  border-color: #abf47c;
   box-shadow: none;
 }
 
@@ -2391,7 +2391,7 @@ fieldset[disabled] .button.is-bleeding.is-inverted.is-outlined {
 .button.is-sass[disabled],
 fieldset[disabled] .button.is-sass {
   background-color: #bf4080;
-  border-color: transparent;
+  border-color: #bf4080;
   box-shadow: none;
 }
 
@@ -2514,7 +2514,7 @@ fieldset[disabled] .button.is-sass.is-inverted.is-outlined {
 .button.is-amazon[disabled],
 fieldset[disabled] .button.is-amazon {
   background-color: #ffd863;
-  border-color: transparent;
+  border-color: #ffd863;
   box-shadow: none;
 }
 
@@ -2637,7 +2637,7 @@ fieldset[disabled] .button.is-amazon.is-inverted.is-outlined {
 .button.is-sponsor[disabled],
 fieldset[disabled] .button.is-sponsor {
   background-color: #ea4aaa;
-  border-color: transparent;
+  border-color: #ea4aaa;
   box-shadow: none;
 }
 
@@ -2760,7 +2760,7 @@ fieldset[disabled] .button.is-sponsor.is-inverted.is-outlined {
 .button.is-twitter[disabled],
 fieldset[disabled] .button.is-twitter {
   background-color: #55acee;
-  border-color: transparent;
+  border-color: #55acee;
   box-shadow: none;
 }
 
@@ -2883,7 +2883,7 @@ fieldset[disabled] .button.is-twitter.is-inverted.is-outlined {
 .button.is-videos[disabled],
 fieldset[disabled] .button.is-videos {
   background-color: #48c78e;
-  border-color: transparent;
+  border-color: #48c78e;
   box-shadow: none;
 }
 
@@ -3006,7 +3006,7 @@ fieldset[disabled] .button.is-videos.is-inverted.is-outlined {
 .button.is-extensions[disabled],
 fieldset[disabled] .button.is-extensions {
   background-color: #3e8ed0;
-  border-color: transparent;
+  border-color: #3e8ed0;
   box-shadow: none;
 }
 
@@ -3129,7 +3129,7 @@ fieldset[disabled] .button.is-extensions.is-inverted.is-outlined {
 .button.is-bootstrap[disabled],
 fieldset[disabled] .button.is-bootstrap {
   background-color: #6f5499;
-  border-color: transparent;
+  border-color: #6f5499;
   box-shadow: none;
 }
 
@@ -18461,6 +18461,10 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   white-space: nowrap;
 }
 
+.bd-navbar {
+  z-index: 50;
+}
+
 .bd-navbar .navbar-brand img {
   height: 28px;
   max-height: 2em;
@@ -18755,6 +18759,9 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
     min-width: 0px;
     right: auto;
   }
+  .bd-navbar-search-desktop-icon {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -18770,14 +18777,14 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   .bd-navbar .navbar-start {
     flex-shrink: 1;
   }
-  .bd-navbar-search-icon {
-    display: none;
-  }
   .bd-search {
     align-items: center;
     display: flex;
     flex-shrink: 0;
-    width: 16rem;
+    width: 12rem;
+  }
+  .bd-navbar-search-mobile-icon {
+    display: none;
   }
 }
 
@@ -18792,6 +18799,9 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   .bd-navbar-dropdown {
     left: 0;
     right: auto;
+  }
+  .bd-search {
+    width: 16rem;
   }
 }
 
@@ -19717,7 +19727,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 .bd-docs-nav, .bd-docs-side {
   background-color: #fafafa;
   width: 11.25rem;
-  z-index: 31;
+  z-index: 40;
 }
 
 .bd-docs-toggles {
@@ -22662,7 +22672,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
   padding: 1em 1.5em;
   position: fixed;
-  z-index: 10;
+  z-index: 60;
 }
 
 .cpck-invisible {
