--- a/docs/cyp/layout/hero.html
+++ b/docs/cyp/layout/hero.html
@@ -18,6 +18,12 @@ title: Layout/Hero
   {{ content }}
 </section>
 
+{% for color in site.data.colors.justColors %}
+  <section id="hero-{{ color }}" class="hero is-{{ color }}">
+    {{ content }}
+  </section>
+{% endfor %}
+
 <section id="hero-small" class="hero is-small">
   {{ content }}
 </section>
@@ -43,3 +49,8 @@ title: Layout/Hero
     {{ content }}
   </div>
 </section>
+
+<div id="hero-buttons" class="hero-buttons"></div>
+<div id="hero-head" class="hero-head"></div>
+<div id="hero-foot" class="hero-foot"></div>
+<div id="hero-body" class="hero-body"></div>
