--- a/sass/form/select.sass
+++ b/sass/form/select.sass
@@ -66,7 +66,7 @@ $select-colors: $form-colors !default
   // Modifiers
   &.is-disabled
     &::after
-      border-color: $input-disabled-color !important
+      border-color: $input-disabled-color
   &.is-fullwidth
     width: 100%
     select
