--- a/docs/css/bulma.css
+++ b/docs/css/bulma.css
@@ -599,7 +599,7 @@ fieldset[disabled] .button.is-text {
 .button.is-white[disabled],
 fieldset[disabled] .button.is-white {
   background-color: white;
-  border-color: transparent;
+  border-color: white;
   box-shadow: none;
 }
 
@@ -705,7 +705,7 @@ fieldset[disabled] .button.is-white.is-inverted.is-outlined {
 .button.is-black[disabled],
 fieldset[disabled] .button.is-black {
   background-color: #0a0a0a;
-  border-color: transparent;
+  border-color: #0a0a0a;
   box-shadow: none;
 }
 
@@ -811,7 +811,7 @@ fieldset[disabled] .button.is-black.is-inverted.is-outlined {
 .button.is-light[disabled],
 fieldset[disabled] .button.is-light {
   background-color: whitesmoke;
-  border-color: transparent;
+  border-color: whitesmoke;
   box-shadow: none;
 }
 
@@ -917,7 +917,7 @@ fieldset[disabled] .button.is-light.is-inverted.is-outlined {
 .button.is-dark[disabled],
 fieldset[disabled] .button.is-dark {
   background-color: #363636;
-  border-color: transparent;
+  border-color: #363636;
   box-shadow: none;
 }
 
@@ -1023,7 +1023,7 @@ fieldset[disabled] .button.is-dark.is-inverted.is-outlined {
 .button.is-primary[disabled],
 fieldset[disabled] .button.is-primary {
   background-color: #00d1b2;
-  border-color: transparent;
+  border-color: #00d1b2;
   box-shadow: none;
 }
 
@@ -1146,7 +1146,7 @@ fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
 .button.is-link[disabled],
 fieldset[disabled] .button.is-link {
   background-color: #485fc7;
-  border-color: transparent;
+  border-color: #485fc7;
   box-shadow: none;
 }
 
@@ -1269,7 +1269,7 @@ fieldset[disabled] .button.is-link.is-inverted.is-outlined {
 .button.is-info[disabled],
 fieldset[disabled] .button.is-info {
   background-color: #3e8ed0;
-  border-color: transparent;
+  border-color: #3e8ed0;
   box-shadow: none;
 }
 
@@ -1392,7 +1392,7 @@ fieldset[disabled] .button.is-info.is-inverted.is-outlined {
 .button.is-success[disabled],
 fieldset[disabled] .button.is-success {
   background-color: #48c78e;
-  border-color: transparent;
+  border-color: #48c78e;
   box-shadow: none;
 }
 
@@ -1515,7 +1515,7 @@ fieldset[disabled] .button.is-success.is-inverted.is-outlined {
 .button.is-warning[disabled],
 fieldset[disabled] .button.is-warning {
   background-color: #ffe08a;
-  border-color: transparent;
+  border-color: #ffe08a;
   box-shadow: none;
 }
 
@@ -1638,7 +1638,7 @@ fieldset[disabled] .button.is-warning.is-inverted.is-outlined {
 .button.is-danger[disabled],
 fieldset[disabled] .button.is-danger {
   background-color: #f14668;
-  border-color: transparent;
+  border-color: #f14668;
   box-shadow: none;
 }
 
@@ -1877,6 +1877,38 @@ fieldset[disabled] .button {
 .buttons.is-right:not(.has-addons) .button:not(.is-fullwidth) {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+}
+
+@media screen and (max-width: 768px) {
+  .button.is-responsive.is-small {
+    font-size: 0.5625rem;
+  }
+  .button.is-responsive,
+  .button.is-responsive.is-normal {
+    font-size: 0.65625rem;
+  }
+  .button.is-responsive.is-medium {
+    font-size: 0.75rem;
+  }
+  .button.is-responsive.is-large {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1023px) {
+  .button.is-responsive.is-small {
+    font-size: 0.65625rem;
+  }
+  .button.is-responsive,
+  .button.is-responsive.is-normal {
+    font-size: 0.75rem;
+  }
+  .button.is-responsive.is-medium {
+    font-size: 1rem;
+  }
+  .button.is-responsive.is-large {
+    font-size: 1.25rem;
+  }
 }
 
 .container {
@@ -3729,6 +3761,7 @@ fieldset[disabled] .select select:hover {
 
 .select.is-disabled::after {
   border-color: #7a7a7a !important;
+  opacity: 0.5;
 }
 
 .select.is-fullwidth {
