--- a/css/bulma.css
+++ b/css/bulma.css
@@ -3785,7 +3785,8 @@ fieldset[disabled] .select select:hover {
 }
 
 .select.is-disabled::after {
-  border-color: #7a7a7a;
+  border-color: #7a7a7a !important;
+  opacity: 0.5;
 }
 
 .select.is-fullwidth {
