--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6068,7 +6068,8 @@ fieldset[disabled] .select select:hover {
 }
 
 .select.is-disabled::after {
-  border-color: #7a7a7a;
+  border-color: #7a7a7a !important;
+  opacity: 0.5;
 }
 
 .select.is-fullwidth {
