New variables: tag focus/active background colors
To be able to change the background colors for focused/active tags using ```!default``` like the most other colors, they should be moved to variables.

--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -1,6 +1,8 @@
 @import "../utilities/mixins"
 
 $tag-background-color: $background !default
+$tag-background-color-dark: darken($tag-background-color, 5%) !default
+$tag-background-color-darker: darken($tag-background-color, 10%) !default
 $tag-color: $text !default
 $tag-radius: $radius !default
 $tag-delete-margin: 1px !default
@@ -129,9 +131,9 @@ $tag-colors: $colors !default
       width: 1px
     &:hover,
     &:focus
-      background-color: darken($tag-background-color, 5%)
+      background-color: $tag-background-color-dark
     &:active
-      background-color: darken($tag-background-color, 10%)
+      background-color: $tag-background-color-darker
   &.is-rounded
     border-radius: $radius-rounded
 
