--- a/sass/helpers/spacing.sass
+++ b/sass/helpers/spacing.sass
@@ -29,3 +29,190 @@ $spacing-values: ("0": 0, "1": 0.25rem, "2": 0.5rem, "3": 0.75rem, "4": 1rem, "5
       .#{$shortcut}#{$spacing-vertical}-#{$name}
         #{$property}-top: $value !important
         #{$property}-bottom: $value !important
+
+
+// mobile paddings + margins
+@each $property, $shortcut in $spacing-shortcuts{
+  @each $name, $value in $spacing-values{
+    // All directions
+    .#{$shortcut}-#{$name}-mobile{
+      @include mobile {
+        #{$property}: $value !important;
+      }
+    }
+    // Cardinal directions
+    @each $direction, $suffix in $spacing-directions{
+      .#{$shortcut}#{$suffix}-#{$name}-mobile{
+        @include mobile {
+          #{$property}-#{$direction}: $value !important;
+        }
+      }
+    }
+    // Horizontal axis
+    @if $spacing-horizontal != null{
+      .#{$shortcut}#{$spacing-horizontal}-#{$name}-mobile{
+        @include mobile {
+          #{$property}-left: $value !important;
+          #{$property}-right: $value !important;
+        }
+      }
+    }// Vertical axis
+    @if $spacing-vertical != null{
+      .#{$shortcut}#{$spacing-vertical}-#{$name}-mobile{
+        @include mobile {
+          #{$property}-top: $value !important;
+          #{$property}-bottom: $value !important;
+        }
+      }
+    }
+  }
+}
+
+// tablet paddings + margins
+@each $property, $shortcut in $spacing-shortcuts{
+  @each $name, $value in $spacing-values{
+    // All directions
+    .#{$shortcut}-#{$name}-tablet{
+      @include tablet {
+        #{$property}: $value !important;
+      }
+    }
+    // Cardinal directions
+    @each $direction, $suffix in $spacing-directions{
+      .#{$shortcut}#{$suffix}-#{$name}-tablet{
+        @include tablet {
+          #{$property}-#{$direction}: $value !important;
+        }
+      }
+    }
+    // Horizontal axis
+    @if $spacing-horizontal != null{
+      .#{$shortcut}#{$spacing-horizontal}-#{$name}-tablet{
+        @include tablet {
+          #{$property}-left: $value !important;
+          #{$property}-right: $value !important;
+        }
+      }
+    }// Vertical axis
+    @if $spacing-vertical != null{
+      .#{$shortcut}#{$spacing-vertical}-#{$name}-tablet{
+        @include tablet {
+          #{$property}-top: $value !important;
+          #{$property}-bottom: $value !important;
+        }
+      }
+    }
+  }
+}
+
+// desktop paddings + margins
+@each $property, $shortcut in $spacing-shortcuts{
+  @each $name, $value in $spacing-values{
+    // All directions
+    .#{$shortcut}-#{$name}-desktop{
+      @include desktop {
+        #{$property}: $value !important;
+      }
+    }
+    // Cardinal directions
+    @each $direction, $suffix in $spacing-directions{
+      .#{$shortcut}#{$suffix}-#{$name}-desktop{
+        @include desktop {
+          #{$property}-#{$direction}: $value !important;
+        }
+      }
+    }
+    // Horizontal axis
+    @if $spacing-horizontal != null{
+      .#{$shortcut}#{$spacing-horizontal}-#{$name}-desktop{
+        @include desktop {
+          #{$property}-left: $value !important;
+          #{$property}-right: $value !important;
+        }
+      }
+    }// Vertical axis
+    @if $spacing-vertical != null{
+      .#{$shortcut}#{$spacing-vertical}-#{$name}-desktop{
+        @include desktop {
+          #{$property}-top: $value !important;
+          #{$property}-bottom: $value !important;
+        }
+      }
+    }
+  }
+}
+
+// widescreen paddings + margins
+@each $property, $shortcut in $spacing-shortcuts{
+  @each $name, $value in $spacing-values{
+    // All directions
+    .#{$shortcut}-#{$name}-widescreen{
+          @include widescreen {
+          #{$property}: $value !important;
+        }
+    }
+    // Cardinal directions
+    @each $direction, $suffix in $spacing-directions{
+      .#{$shortcut}#{$suffix}-#{$name}-widescreen{
+          @include widescreen {
+            #{$property}-#{$direction}: $value !important;
+          }
+      }
+    }
+    // Horizontal axis
+    @if $spacing-horizontal != null{
+      .#{$shortcut}#{$spacing-horizontal}-#{$name}-widescreen{
+          @include widescreen {
+            #{$property}-left: $value !important;
+            #{$property}-right: $value !important;
+          }
+      }
+    }// Vertical axis
+    @if $spacing-vertical != null{
+      .#{$shortcut}#{$spacing-vertical}-#{$name}-widescreen{
+          @include widescreen {
+            #{$property}-top: $value !important;
+            #{$property}-bottom: $value !important;
+        }
+      }
+    }
+  }
+}
+
+// fullhd paddings + margins
+@each $property, $shortcut in $spacing-shortcuts{
+  @each $name, $value in $spacing-values{
+    // All directions
+    .#{$shortcut}-#{$name}-fullhd{
+          @include fullhd {
+            #{$property}: $value !important;
+        }
+    }
+    // Cardinal directions
+    @each $direction, $suffix in $spacing-directions{
+      .#{$shortcut}#{$suffix}-#{$name}-fullhd{
+          @include fullhd {
+            #{$property}-#{$direction}: $value !important;
+          }
+      }
+    }
+    // Horizontal axis
+    @if $spacing-horizontal != null{
+      .#{$shortcut}#{$spacing-horizontal}-#{$name}-fullhd{
+            @include fullhd {
+            #{$property}-left: $value !important;
+            #{$property}-right: $value !important;
+          }
+      }
+    }// Vertical axis
+    @if $spacing-vertical != null{
+      .#{$shortcut}#{$spacing-vertical}-#{$name}-fullhd{
+            @include fullhd {
+            #{$property}-top: $value !important;
+            #{$property}-bottom: $value !important;
+          }
+      }
+    }
+  }
+}
+
