--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -48,6 +48,8 @@ route: documentation
   </main>
 
   <aside id="docsSide" class="bd-docs-side {% if page.fullwidth %}bd-stickied{% endif %}">
+    {% include elements/carbon.html %}
+
     {% include global/fortyfour.html %}
 
     {% if page.meta %}
