--- a/docs/_sass/index/sponsors.scss
+++ b/docs/_sass/index/sponsors.scss
@@ -3,17 +3,17 @@ $bd-sponsor-width: 12rem;
 
 .bd-sponsors {
   --bd-sponsors-spacing: #{$block-spacing};
+  padding: var(--bd-sponsors-spacing);
 }
 
 .bd-sponsors-body {
-  display: grid;
-  grid-gap: var(--bd-index-gap);
+  // display: grid;
+  // grid-gap: var(--bd-index-gap);
 }
 
 @include mobile {
   .bd-sponsors {
     grid-gap: var(--bd-sponsors-spacing);
-    padding: var(--bd-sponsors-spacing);
   }
 }
 
@@ -22,6 +22,8 @@ $bd-sponsor-width: 12rem;
   display: grid;
   grid-gap: 0;
   grid-template-columns: repeat(auto-fill, minmax(var(--sponsor-width), 1fr));
+  margin-left: -$block-spacing;
+  margin-right: -$block-spacing;
   overflow: hidden;
 }
 
@@ -35,23 +37,24 @@ $bd-sponsor-width: 12rem;
   img {
     position: relative;
   }
+
+  img {
+    border-radius: 0.5em;
+    max-height: 3rem;
+    width: auto;
+  }
 }
 
 @include touch {
   .bd-sponsors {
     padding: var(--bd-index-vertical);
   }
-
-  .bd-partner-sponsors {
-    margin-left: -$block-spacing;
-    margin-right: -$block-spacing;
-  }
 }
 
 @include desktop {
   .bd-sponsors {
-    padding-bottom: var(--bd-index-vertical);
-    padding-top: var(--bd-index-vertical);
+    // padding-bottom: var(--bd-index-vertical);
+    // padding-top: var(--bd-index-vertical);
   }
 
   .bd-sponsors-body {
@@ -68,8 +71,20 @@ $bd-sponsor-width: 12rem;
   }
 
   .bd-sponsors-content {
+    align-items: flex-start;
+    display: flex;
     font-size: 1.125rem;
     grid-column: 3 / span 1;
+    max-width: none;
+
+    .content {
+      margin-left: 1.5rem;
+      margin-right: 1.5rem;
+    }
+
+    .button {
+      flex-shrink: 0;
+    }
   }
 
   .bd-sponsors-list {
@@ -92,9 +107,9 @@ $bd-sponsor-width: 12rem;
 }
 
 @include fullhd {
-  .bd-sponsors {
-    --bd-sponsors-spacing: 9rem;
-  }
+  // .bd-sponsors {
+  //   --bd-sponsors-spacing: 9rem;
+  // }
 
   .bd-sponsors-content {
     font-size: 1.5rem;
