Replace hardcoded import path with variable + loop

--- a/docs/_includes/steps/add-custom-styles.html
+++ b/docs/_includes/steps/add-custom-styles.html
@@ -1,3 +1,5 @@
+{% assign imported_files = "/sass/utilities/_all.sass;/sass/base/_all.sass;/sass/elements/button.sass;/sass/elements/container.sass;/sass/elements/title.sass;/sass/form/_all.sass;/sass/components/navbar.sass;/sass/layout/hero.sass;/sass/layout/section.sass" | split: ";" %}
+
 {% capture mystyles %}
 @charset "utf-8";
 
@@ -27,15 +29,9 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 // Import only what you need from Bulma
-@import "../node_modules/bulma/sass/utilities/_all.sass";
-@import "../node_modules/bulma/sass/base/_all.sass";
-@import "../node_modules/bulma/sass/elements/button.sass";
-@import "../node_modules/bulma/sass/elements/container.sass";
-@import "../node_modules/bulma/sass/elements/title.sass";
-@import "../node_modules/bulma/sass/form/_all.sass";
-@import "../node_modules/bulma/sass/components/navbar.sass";
-@import "../node_modules/bulma/sass/layout/hero.sass";
-@import "../node_modules/bulma/sass/layout/section.sass";
+{% for file in imported_files -%}
+{{ file | prepend: include.path | prepend: '@import "' | append: '";' }}
+{% endfor -%}
 {% endcapture %}
 
 {% capture step_6 %}
