Add css class .is-sticky and subclass .is-sticky-bottom for put an object on bottom

--- a/sass/helpers/position.sass
+++ b/sass/helpers/position.sass
@@ -5,3 +5,11 @@
 
 .is-relative
   position: relative !important
+
+.is-sticky
+  position: sticky
+  top: 0
+  z-index: 99
+  &.is-sticky-bottom
+    top: unset !important
+    bottom: 10px !important
