--- a/sass/helpers/flexbox.sass
+++ b/sass/helpers/flexbox.sass
@@ -33,3 +33,8 @@ $flex-operators: grow, shrink
   @for $i from 0 through 5
     .is-flex-#{$operator}-#{$i}
       flex-#{$operator}: $i !important
+
+$spacing-values: ("0": 0, "1": 0.5rem, "2": 1rem, "3": 1.5rem, "4": 2rem, "5": 2.5rem, "6":3rem) !default
+@each $name, $value in $spacing-values
+  .is-flex-gap-#{$name}
+    gap: $value !important
