Added new typography helper
.is-overflow to break line if it's too long.

--- a/sass/helpers/typography.sass
+++ b/sass/helpers/typography.sass
@@ -76,6 +76,9 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
 .is-underlined
   text-decoration: underline !important
 
+.is-overflow
+  word-break: break-word !important;
+
 .has-text-weight-light
   font-weight: $weight-light !important
 .has-text-weight-normal
