Update vertical snippets

--- a/docs/_sass/components/code.scss
+++ b/docs/_sass/components/code.scss
@@ -183,7 +183,7 @@
   }
 }
 
-@include tablet {
+@include fullhd {
   .bd-snippet.bd-is-vertical {
     align-items: flex-start;
     display: grid;
