--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -17912,7 +17912,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   top: 0;
 }
 
-@media screen and (min-width: 769px), print {
+@media screen and (min-width: 1408px) {
   .bd-snippet.bd-is-vertical {
     align-items: flex-start;
     display: grid;
