--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -689,6 +689,7 @@ $(document).ready(function() {
   <p>
     The navbar brand is <strong>always visible</strong>: on both touch devices {% include bp/touch.html %} and desktop {% include bp/desktop.html %}. As a result, it is recommended to only use a few navbar items to avoid <strong>overflowing</strong> horizontally on small devices.
   </p>
+  <p>If you need <code>navbar-burger</code> to adapt to the mobile terminal according to your own website, you can modify the media query in the range of 1007-1008 under CSS file query. </p>
 </div>
 
 <div class="bd-example is-paddingless">
