Fixes disabled selected checkbox radio
Only change the color of disabled non selected checkbox-radio

--- a/sass/form/checkbox-radio.sass
+++ b/sass/form/checkbox-radio.sass
@@ -10,8 +10,9 @@
   &[disabled],
   fieldset[disabled] &,
   input[disabled]
-    color: $input-disabled-color
     cursor: not-allowed
+  &:not(.is-selected)
+    color: $input-disabled-color
 
 .checkbox
   @extend %checkbox-radio
