Fix for issue 336
Using gapless columns and offset at the same time, cancels the offset. Removing margin: 0 from columns.scss fixes the problem.

--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -452,7 +452,7 @@ $column-gap: 0.75rem !default
     +ltr-property("margin", 0)
     margin-top: 0
     & > .column
-      margin: 0
+      // margin: 0
       padding: 0 !important
     &:not(:last-child)
       margin-bottom: 1.5rem
