Add support for inline svg images

--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -5,7 +5,8 @@ $dimensions: 16 24 32 48 64 96 128 !default
 .image
   display: block
   position: relative
-  img
+  img,
+  svg
     display: block
     height: auto
     width: 100%
@@ -31,6 +32,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
   &.is-1by2,
   &.is-1by3
     img,
+    svg,
     .has-ratio
       @extend %overlay
       height: 100%
