--- a/css/bulma-rtl.css
+++ b/css/bulma-rtl.css
@@ -4628,7 +4628,8 @@ fieldset[disabled] .select select:hover {
 
 .breadcrumb li + li::before {
   color: #b5b5b5;
-  content: "\0002f";
+  font-family: inherit;
+  content: "/";
 }
 
 .breadcrumb ul,
