--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4628,8 +4628,7 @@ fieldset[disabled] .select select:hover {
 
 .breadcrumb li + li::before {
   color: #b5b5b5;
-  font-family: inherit;
-  content: "/";
+  content: "\0002f";
 }
 
 .breadcrumb ul,
