Change font awesome link and fix anchor link on select docs

--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -393,7 +393,7 @@ meta:
 {% include elements/anchor.html name="Icons" %}
 
 <div class="content">
-  <p>You can use any of the <a href="http://fontawesome.io/">Font Awesome</a> <strong>icons</strong>.</p>
+  <p>You can use any of the <a href="https://fontawesome.com/">Font Awesome</a> <strong>icons</strong>.</p>
 </div>
 
 {% include elements/snippet.html content=tabs_icons_example horizontal=true more=true %}
