Non-hiding navbar-link arrow fix

--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -244,7 +244,7 @@ a.navbar-item,
     .navbar-item
       align-items: center
       display: flex
-  .navbar-link
+  .navbar-link:not(.is-arrowless)
     &::after
       display: none
   .navbar-menu
