wrap lines in code to reduce size of the example

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -423,7 +423,9 @@ meta:
 {% capture navbar_dropdown_default_example %}
 <nav class="navbar" role="navigation" aria-label="dropdown navigation">
   <a class="navbar-item">
-    <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28">
+    <img src="{{ site.url }}/images/bulma-logo.png"
+      alt="{{ site.data.meta.title }}"
+      width="112" height="28">
   </a>
 
   <div class="navbar-item has-dropdown is-active">
@@ -464,7 +466,9 @@ meta:
 {% capture navbar_dropdown_boxed_example %}
 <nav class="navbar is-transparent" role="navigation" aria-label="dropdown navigation">
   <a class="navbar-item">
-    <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28">
+    <img src="{{ site.url }}/images/bulma-logo.png"
+      alt="{{ site.data.meta.title }}"
+      width="112" height="28">
   </a>
 
   <div class="navbar-item has-dropdown is-active">
@@ -505,7 +509,9 @@ meta:
 {% capture navbar_dropdown_item_active_example %}
 <nav class="navbar" role="navigation" aria-label="dropdown navigation">
   <a class="navbar-item">
-    <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28">
+    <img src="{{ site.url }}/images/bulma-logo.png"
+      alt="{{ site.data.meta.title }}"
+      width="112" height="28">
   </a>
 
   <div class="navbar-item has-dropdown is-active">
