Uppercase text in breadcrumbs
Sometimes the breadcrumbs appear to be uppercase. It would be nice to make to developer choose this parameter.

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -1,5 +1,6 @@
 @import "../utilities/mixins"
 
+$breadcrumb-text-transform: none !default 
 $breadcrumb-item-color: $link !default
 $breadcrumb-item-hover-color: $link-hover !default
 $breadcrumb-item-active-color: $text-strong !default
@@ -13,6 +14,7 @@ $breadcrumb-item-separator-color: $border-hover !default
   @extend %block
   @extend %unselectable
   font-size: $size-normal
+  text-transform: $breadcrumb-text-transform
   white-space: nowrap
   a
     align-items: center
