fix: Fix fixed font size on html tag breaking accessibility
close #3588

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -316,7 +316,7 @@ th:not([align]) {
 
 html {
   background-color: white;
-  font-size: 16px;
+  font-size: 1em;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-width: 300px;
