--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -1,7 +1,7 @@
 @import "../utilities/mixins"
 
 $body-background-color: $scheme-main !default
-$body-size: 16px !default
+$body-size: 1em !default
 $body-min-width: 300px !default
 $body-rendering: optimizeLegibility !default
 $body-family: $family-primary !default
